--- a/src/font.css
+++ b/src/font.css
@@ -36,3 +36,14 @@ http://scripts.sil.org/OFL
 		url('/font/Pretendard-Regular.woff2') format('woff2'),
 		url('/font/Pretendard-Regular.woff') format('woff');
 }
+
+
+@font-face {
+	font-family: 'Pretendard';
+	font-weight: 300;
+	font-display: swap;
+	src:
+		local('Pretendard Light'),
+		url('/font/Pretendard-light.woff2') format('woff2'),
+		url('/font/Pretendard-light.woff') format('woff');
+}
