--- a/src/font.css
+++ b/src/font.css
@@ -8,42 +8,9 @@ http://scripts.sil.org/OFL
 */
 
 @font-face {
-	font-family: 'Pretendard';
-	font-weight: 700;
+	font-family: 'Pretendard Variable';
+	font-weight: 45 920;
+	font-style: normal;
 	font-display: swap;
-	src:
-		local('Pretendard Bold'),
-		url('/font/Pretendard-Bold.woff2') format('woff2'),
-		url('/font/Pretendard-Bold.woff') format('woff');
-}
-
-@font-face {
-	font-family: 'Pretendard';
-	font-weight: 500;
-	font-display: swap;
-	src:
-		local('Pretendard Medium'),
-		url('/font/Pretendard-Medium.woff2') format('woff2'),
-		url('/font/Pretendard-Medium.woff') format('woff');
-}
-
-@font-face {
-	font-family: 'Pretendard';
-	font-weight: 400;
-	font-display: swap;
-	src:
-		local('Pretendard Regular'),
-		url('/font/Pretendard-Regular.woff2') format('woff2'),
-		url('/font/Pretendard-Regular.woff') format('woff');
-}
-
-
-@font-face {
-	font-family: 'Pretendard';
-	font-weight: 300;
-	font-display: swap;
-	src:
-		local('Pretendard Light'),
-		url('/font/Pretendard-light.woff2') format('woff2'),
-		url('/font/Pretendard-light.woff') format('woff');
+	src: url('/font/PretendardVariable.woff2') format('woff2-variations');
 }
